--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Wa</a>
+                <a href="#">Jefferson</a>
             </div>
             <nav id="nav">
                 <ul>
