--- a/index.html
+++ b/index.html
@@ -111,12 +111,14 @@
                     </div>
                 </div>
             </div>
-            <a href="/cv/LavadoAstuhuamanCV.pdf" target="_blank">
-                <button>
-                    Descargar CV <i class="fa-solid fa-download"></i>
-                    <span class="overlay"></span>
-                </button>
-            </a>
+            <div class="cv">
+                <a href="/cv/LavadoAstuhuamanCV.pdf" target="_blank">
+                    <button>
+                        Descargar CV <i class="fa-solid fa-download"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -214,7 +216,7 @@
                     <input type="text" placeholder="Tema">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                     <button>
-                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                        Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
                 </div>
